<resources>
    <string name="app_name">V管家</string>
    <string name="ceshi">测试</string>
    <string name="image">图片说明</string>
    <string name="view_state_display">display</string>
    <string name="view_state_hide">hide</string>
    <string name="isTitleMethodReturnsTrue">isTitle方法是否返回true？</string>
    <string name="activity_is_layout">请设置Activity相应布局！</string>
    <string name="plase_check_netword">请检查网络连接是否正常！</string>
    <string name="v_housekeeper">V管家</string>
    <string name="welcome_v_housekeeper">欢迎使用V管家</string>
    <string name="password_login">密码登录</string>
    <string name="accounts_login">帐号登录</string>
    <string name="authentication_code">验证码</string>
    <string name="authentication_code_login">验证码登录</string>
    <string name="please_phone_number">请输入手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_authentication_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="forget_the_password">忘记密码？</string>
    <string name="password_txt">密码</string>
    <string name="login">登录</string>
    <string name="phone_retrieval">手机找回</string>
    <string name="phone_number">手机号码</string>
    <string name="input_authentication_code">输入验证码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="submission">提交</string>
    <string name="recapture">重新获取</string>
    <string name="verifying_code_has_been_sent">验证码已发送,可能会有延迟请稍后</string>
    <string name="forget_the_password_prompt">请输入您的账号查询您的密码</string>
    <string name="next_step">下一步</string>
    <string name="sent_verification_code">发送验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm">确定</string>
    <string name="again_identification">再次确认</string>
    <string name="identification">确认</string>
    <string name="congratulations">恭喜</string>
    <string name="password_resetting_success">你的帐号密码已重置成功</string>
    <string name="go_login">去登陆</string>
    <string name="home">首页</string>
    <string name="meeting">会议</string>
    <string name="my">我的</string>
    <string name="contract_money">合同款项(元)&#160;&#160;&#160;&#160;%s</string>
    <string name="receivables">待收款项(元)&#160;&#160;&#160;&#160;%s</string>
    <string name="home_total">%s\n共计 (场)</string>
    <string name="have_been_held">%s\n已举办 (场)</string>
    <string name="today_meeting">今日会议</string>
    <string name="my_attention">我的关注</string>
    <string name="pending_conference">待办会议</string>
    <string name="activity_prediction">活动预计</string>
    <string name="search_make_content">搜索指定内容</string>
    <string name="search_history">搜索历史</string>
    <string name="search_content_tv1">会议名称</string>
    <string name="search_content_tv2">V智会</string>
    <string name="search_content_tv3">销售姓名</string>
    <string name="search_content_tv4">会议地点</string>
    <string name="search_content_tv5">VIP1</string>
    <string name="search_content_tv6">VIP2</string>
    <string name="search_content_tv7">VIP3</string>
    <string name="search_content_tv8">VIP4</string>
    <string name="new_meeting">新建会议</string>
    <string name="need_to_add_an_item">此页信息均为必添项</string>
    <string name="meeting_name">会议名称</string>
    <string name="please_choose">请选择</string>
    <string name="please_enter">请输入</string>
    <string name="sale_name">销售姓名</string>
    <string name="meeting_place">会议地点</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="setting_avatar">点击设置头像</string>
    <string name="message_remind">设置消息提醒</string>
    <string name="modify_password">修改密码</string>
    <string name="exit_system">退出系统</string>
    <string name="my_creation">我的创建</string>
    <string name="account_settings">设置</string>
    <string name="stay_execute">待执行</string>
    <string name="before_meeting">会前</string>
    <string name="in_meeting">会中</string>
    <string name="finished">已结束</string>
    <string name="attention">关注</string>
    <string name="yi_attention">已关注</string>
    <string name="daiban">待办</string>
    <string name="look_at_eo_list">查看EO单</string>
    <string name="estimate">预计：%s</string>
    <string name="preservation_bottom">保底：%s</string>
    <string name="true_to">实到：%s</string>
    <string name="activity_flow">活动流程</string>
    <string name="create_activity_flow">创建活动流程</string>
    <string name="change_in_demand">主办方需求变化</string>
    <string name="v_emind">小V提醒</string>
    <string name="already_paid_item">已付款项</string>
    <string name="contract_amount">合同金额</string>
    <string name="amount_paid">已付金额</string>
    <string name="close">关闭</string>
    <string name="complaints_box">满意度</string>
    <string name="host">主办方(%s)</string>
    <string name="participants">参会方(%s)</string>
    <string name="score">打分</string>
    <string name="environment">环境：%s</string>
    <string name="very_good">非常好</string>
    <string name="good">好</string>
    <string name="general">一般</string>
    <string name="bad">差</string>
    <string name="no">无</string>
    <string name="very_bad">非常差</string>
    <string name="service">服务：%s</string>
    <string name="comment">评论(%s)</string>
    <string name="no_feedback">暂无反馈哦</string>
    <string name="enter_the_meeting">进入会议</string>
    <string name="today">今天</string>
    <string name="this_week">本周</string>
    <string name="this_month">本月</string>
    <string name="this_year">本年</string>
    <string name="cancel">取消</string>
    <string name="album">相册</string>
    <string name="photograph">拍照</string>
    <string name="whole">全部</string>
    <string name="pending_payment">待付款</string>
    <string name="perfected">待完善</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="meeting_ganlan">会议概览</string>
    <string name="flow_chart">会议流程</string>
    <string name="predetermined_number">%s\n预计人数</string>
    <string name="bottom_number">%s\n保底人数</string>
    <string name="actual_number">%s\n实到人数</string>
    <string name="create_process">创建流程</string>
    <string name="change_demand">活动变化</string>
    <string name="conference_service_content_flow">会议服务内容流程</string>
    <string name="number_of_participants">参会人数</string>
    <string name="vip_reception_information">VIP接待信息</string>
    <string name="meeting_is_important">会议是否重要</string>
    <string name="important">重要</string>
    <string name="not_important">不重要</string>
    <string name="upload_eo_list">上传EO单</string>
    <string name="edit_process">编辑流程</string>
    <string name="meeting_link_confirmed">会议环节待确认</string>
    <string name="the_meeting_has_been_confirmed">会议环节已确认</string>
    <string name="confirmation_content">确认内容</string>
    <string name="add_the_person_in_charge">+ 添加负责人</string>
    <string name="host_name">主办方: %s</string>
    <string name="meeting_address">鸿山亭: </string>
    <string name="salename">销售: %s</string>
    <string name="service_flow">服务流程</string>
    <string name="conference_service_group">会议服务群</string>
    <string name="tab_conference_information">会议信息</string>
    <string name="tab_group_chat">群消息</string>
    <string name="tab_feedback">活动变化</string>
    <string name="tab_notice">公告</string>
    <string name="get_into_meeting">进入会议</string>
    <string name="get_into">进入</string>
    <string name="sponsor_member">主办方成员</string>
    <string name="see">查看</string>
    <string name="meeting_details">会议详情</string>
    <string name="vip_details">VIP详情</string>
    <string name="group_chat_members">群聊成员</string>
    <string name="common_n_people">共%s人</string>
    <string name="expand_all">展开全部</string>
    <string name="sign_out_meeting">退出会议</string>
    <string name="confirm_enter_the_meeting">确认加入此会议服务群</string>
    <string name="view_only">仅查看</string>
    <string name="show_contract_amount">合同金额：%s</string>
    <string name="show_amount_paid">已付金额：%s</string>
    <string name="send">发送</string>
    <string name="sponsor_notification">主办方通知</string>
    <string name="satisfaction">满意度</string>
    <string name="group_chat_notification">群聊通知</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="change_the_password">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="create_meeting_and_service_process">创建会议与服务流程</string>
    <string name="create_meeting">创建会议</string>
    <string name="please_create">请创建</string>
    <string name="create_service_process">创建服务流程</string>
    <string name="add_process">+ 添加流程</string>
    <string name="editing_time">编辑时间</string>
    <string name="add_vip_personage_introduction">添加VIP人物介绍</string>
    <string name="please_enter_name">请输入姓名</string>
    <string name="please_enter_character_introduction">请输入VIP人物介绍</string>
    <string name="add_receptionist">添加接待人</string>
    <string name="estimated_number_people">预计人数</string>
    <string name="bottom_number_people">保底人数</string>
    <string name="conference_level">会议等级</string>
    <string name="receptionist">接待人</string>
    <string name="vip_personage_introduction">VIP人物介绍</string>
    <string name="v_zhi_hui">V智会</string>
    <string name="save">保存</string>
    <string name="selected_people">已选择：%d人</string>
    <string name="replace_head_image">更换头像%s!</string>
    <string name="adding_custom_processes">添加自定义流程</string>
    <string name="please_enter_process_title">请输入25字以内</string>
    <string name="word_count">%d/25</string>
    <string name="please_seting_listener">请设置监听</string>
    <string name="my_create">我的创建</string>
    <string name="new_message_notice">新消息通知</string>
    <string name="setting_prompt">关闭或开启新消息通知,请在你的设备“设置-通知中心-V管家”进行更改</string>
    <string name="group_message">群消息</string>
    <string name="task_assignment">任务分配通知</string>
    <string name="old_password">旧密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_add_old_password">请添写旧密码</string>
    <string name="please_add_new_password">请添写新密码</string>
    <string name="forget_old_code">忘记旧密码?</string>
    <string name="look_eo">查看EO单</string>
    <string name="personnel_list">人员名单</string>
    <string name="add_person_charge">添加负责人</string>
    <string name="group_members">群成员</string>
    <string name="group_notice">群公告</string>
    <string name="comprehensive_score">综合打分</string>
    <string name="modify_password_true">密码修改成功！</string>
    <string name="modify_password_false">密码修改失败！</string>
    <string name="select_role">选择角色</string>
    <string name="ready">就绪</string>
    <string name="confirmed">已确认</string>
    <string name="no_confirmed">待确认</string>
    <string name="re_confirmed">再确认</string>
    <string name="xiaovtixing_top">小v将会根据会议变化，及时给您发送智能建议哒。</string>
    <string name="xiaovtixing">如：加餐或减餐建议、增加茶歇或减少茶歇建议。\n更多功能，敬请期待！</string>
    <string name="modify">修改</string>
    <string name="editor">编辑</string>
    <string name="group_edit">编辑群公告</string>
    <string name="group_release">发布</string>
    <string name="load_more">查看更多群成员</string>
    <string name="out_meeting">退出此会议</string>
    <string name="required_title">标题（必填）</string>
    <string name="required_content">正文（必填）</string>
    <string name="must_add_item_not_empty">必添项不可为空！</string>
    <string name="input_title">请输入标题</string>
    <string name="input_title_length">请输入40字以内</string>
    <string name="input_content">请输入正文内容</string>
    <string name="input_content_length">请输入300字以内</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="announcements">发布公告%s!</string>
    <string name="attention_prompt">关注%s！</string>
    <string name="attention_cancel_prompt">取消关注%s！</string>
    <string name="delete_meeting">取消会议%s！</string>
    <string name="replay_content">回复：“%s”</string>
    <string name="has_replay">已回复</string>
    <string name="no_replay">回复</string>
    <string name="hint_replay">回复: %s</string>
</resources>