<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/welcome_v_housekeeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/welcome_v_housekeeper"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_28"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/phone_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/phone_number"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="@+id/welcome_v_housekeeper"
        app:layout_constraintTop_toBottomOf="@+id/welcome_v_housekeeper" />

    <EditText
        android:id="@+id/logoin_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:ems="10"
        android:hint="@string/please_phone_number"
        android:inputType="phone"
        android:lines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_txt" />

    <TextView
        android:id="@+id/login_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="@+id/logoin_phone"
        app:layout_constraintTop_toBottomOf="@+id/logoin_phone" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:ems="10"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:lines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="@+id/login_password_txt"
        app:layout_constraintTop_toBottomOf="@+id/login_password_txt" />

    <Button
        android:id="@+id/get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/get_verification_code"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_12"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="@+id/login_password" />

    <TextView
        android:id="@+id/verification_code_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifying_code_has_been_sent"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_13"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_code_prompt" />

    <TextView
        android:id="@+id/authentication_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/authentication_code_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/forget_the_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/forget_the_password"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</android.support.constraint.ConstraintLayout>
