<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/meeting_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10">

        <RadioButton
            android:id="@+id/meeting_group_whole"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/select_radiobutton_left"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/whole"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dp_14" />

        <RadioButton
            android:id="@+id/meeting_group_pending_payment"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/select_radiobutton_mid"
            android:button="@null"
            android:gravity="center"
            android:text="@string/pending_payment"
            android:textColor="@color/press"
            android:textSize="@dimen/dp_14" />

        <RadioButton
            android:id="@+id/meeting_group_perfected"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/select_radiobutton_mid"
            android:button="@null"
            android:gravity="center"
            android:text="@string/perfected"
            android:textColor="@color/press"
            android:textSize="@dimen/dp_14" />

        <RadioButton
            android:id="@+id/meeting_group_day"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/select_radiobutton_mid"
            android:button="@null"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/press"
            android:textSize="@dimen/dp_14" />

        <RadioButton
            android:id="@+id/meeting_group_month"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/select_radiobutton_mid"
            android:button="@null"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/press"
            android:textSize="@dimen/dp_14" />

        <RadioButton
            android:id="@+id/meeting_group_year"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/select_radiobutton_right"
            android:button="@null"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/press"
            android:textSize="@dimen/dp_14" />
    </RadioGroup>

</merge>
