<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/sdap_already_paid_item"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/already_paid_item"
        android:textColor="@color/color_303030"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sdap_show_contract_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/show_contract_amount"
        android:textColor="@color/color_303030"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="@+id/sdap_already_paid_item"
        app:layout_constraintTop_toBottomOf="@+id/sdap_already_paid_item" />

    <TextView
        android:id="@+id/sdap_show_amount_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/show_amount_paid"
        android:textColor="@color/color_303030"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="@+id/sdap_show_contract_amount"
        app:layout_constraintTop_toBottomOf="@+id/sdap_show_contract_amount" />

    <TextView
        android:id="@+id/sdap_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/close"
        android:textColor="@color/color_303030"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sdap_show_amount_paid" />

</android.support.constraint.ConstraintLayout>